--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,1 +1,5 @@
 $altezzaHeader: 140px;
+$altezzaNavBottom: 70px;
+
+// per inserire la query tablet in una variabile
+$tablet:  "media screen and (max-width: 980px)";
